--- a/blocks/recent-jobs/style.css
+++ b/blocks/recent-jobs/style.css
@@ -99,6 +99,7 @@
 }
 
 .wcb-job-widget-name {
+	display: block;
 	font-size: var(--wcb-text-base);
 	font-weight: var(--wcb-font-semibold);
 	color: var(--wcb-contrast);
